--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="desktop-design-style.css">
   <title>Frontend Mentor | Tip calculator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,6 +15,154 @@
   </style> -->
 </head>
 <body>
+
+
+
+  <img class="logo" src="images/logo.svg" alt="">
+
+  <div class="contener">
+
+        <div class="left-side">
+          
+            <div class="section-1 cross">
+              <p class="title">Bill</p>
+              <input type="number" min="0" placeholder="0">
+              <img src="images/icon-dollar.svg" alt="">
+            </div>
+
+            <div class="section-2">
+              <p class="title">Select Tip %</p>
+              <div class="tip-box">
+                <input type="button" value="5%">
+                <input type="button" value="10%">
+                <input type="button" value="15%">
+                <input type="button" value="25%">
+                <input type="button" value="50%">
+                <input style="background-color: hsl(185, 41%, 84%); color: hsl(183, 100%, 15%); text-align: end;" type="number" min="0" max="100" step="1"= placeholder="Custom">
+              </div>
+            </div>
+
+            <div class="section-3 cross">
+              <p class="title">Number of People</p>
+              <input type="number" min="0" step="1" placeholder="0">
+              <img src="images/icon-person.svg">
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+    <div class="rghit-side">
+
+      <div class="section-4">
+        <div class="type">
+          <p>Tip Amount</p>
+          <p>/ person</p>
+        </div>
+
+        <div class="amount">
+          <p class="amount-price">0.00</p>
+          <img src="images/icon-dollar.svg" alt="">
+        </div>
+      </div>
+
+
+
+      <div class="total">
+        <div class="type">
+          <p>Total</p>
+          <p>/ person</p>
+        </div>
+
+        <div class="price">
+          <p class="all-price">0.00</p>
+          <img src="images/icon-dollar.svg" alt="">
+        </div>
+      </div>
+
+
+      <input type="button" value="Reset">
+
+    </div>
+
+  </div>
+
+
+
+
+  <!-- <img class="logo" src="images/logo.svg" alt="">
+
+  <div class="contener">
+
+    <div class="left-side">
+
+        <div class="bill num">
+          <p class="title-p">Bill</p>
+          <input type="text">
+          <img src="images/icon-dollar.svg" alt="">
+        </div>
+
+        <div class="tip">
+          <p class="title-p">Select Tip %</p>
+          <div class="tip-box">
+            <input type="button" value="5%">
+            <input type="button" value="10%">
+            <input type="button" value="15%">
+            <input type="button" value="25%">
+            <input type="button" value="50%">
+            <input type="text" placeholder="Custom">
+          </div>
+        </div>
+
+        <div class="Number-People num">
+          <p class="title-p">Number of People</p>
+          <input type="text">
+          <img src="images/icon-person.svg">
+        </div>
+
+    </div>
+
+
+
+    <div class="rghit-side">
+
+      <div class="tip-amount">
+        <div class="type">
+          <p>Tip Amount</p>
+          <p>/ person</p>
+        </div>
+
+        <div class="amount">
+          <p class="amount-price">0.00</p>
+          <img src="images/icon-dollar.svg" alt="">
+        </div>
+      </div>
+
+
+
+      <div class="total">
+        <div class="type">
+          <p>Total</p>
+          <p>/ person</p>
+        </div>
+
+        <div class="price">
+          <p class="all-price">0.00</p>
+          <img src="images/icon-dollar.svg" alt="">
+        </div>
+      </div>
+
+
+      <input type="button" value="Reset">
+
+    </div>
+
+  </div> -->
 
 
 
