--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 
         <div class="amount">
           <p class="amount-price">0.00</p>
-          <img src="images/icon-dollar.svg" alt="">
+          <!-- <img src="images/icon-dollar.svg" alt=""> -->
         </div>
       </div>
 
 
 
-      <div class="total">
+      <div class="section-5">
         <div class="type">
           <p>Total</p>
           <p>/ person</p>
@@ -81,12 +81,12 @@
 
         <div class="price">
           <p class="all-price">0.00</p>
-          <img src="images/icon-dollar.svg" alt="">
+          <!-- <img src="images/icon-dollar.svg" alt=""> -->
         </div>
       </div>
 
 
-      <input type="button" value="Reset">
+      <input type="button" value="RESET">
 
     </div>
 
